--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -21,6 +21,11 @@
         display: grid;
         justify-items: center;
     }
+
+    .macaroons__items {
+        margin: 0 auto;
+        max-width: 600px;
+    }
 }
 
 @media screen and (max-width: 940px) {
@@ -134,6 +139,13 @@
         right: 10px;
     }
 
+    .success-message {
+        position: relative;
+        height: 499px;
+        left: -50px;
+        padding-right: 250px;
+    }
+
     .order__strawberry {
         top: 223px;
         left: 348px;
@@ -144,9 +156,20 @@
         bottom: 420px;
     }
 
+    .macaroons__items {
+        margin: 0 auto;
+        max-width: 300px;
+    }
+}
+
     @media screen and (max-width: 680px) {
         .order__image {
             display: none;
+        }
+
+        .success-message {
+            height: 100%;
+            padding: 20px;
         }
 
         .order__second-strawberry {
@@ -514,4 +537,3 @@
             display: none;
         }
     }
-}
